# fgl

./: .gitignore  .travis.yml  ChangeLog  LICENSE  README.md  cabal.project  fgl.cabal  prologue.txt
.github/workflows/: haskell-ci.yml
Data/Graph/: Inductive.hs
Data/Graph/Inductive/: Basic.hs  Example.hs  Graph.hs  Graphviz.hs  Monad.hs  NodeMap.hs  PatriciaTree.hs  Query.hs  Tree.hs
Data/Graph/Inductive/Internal/: FiniteMap.hs  Heap.hs  Queue.hs  RootPath.hs  Thread.hs
Data/Graph/Inductive/Monad/: IOArray.hs  Primitive.hs  STArray.hs
Data/Graph/Inductive/New/: Graph.hs  SmallSet.hs
Data/Graph/Inductive/Query/: ArtPoint.hs  BCC.hs  BFS.hs  Cycles.hs  DFS.hs  Dominators.hs  GVD.hs  Indep.hs  MST.hs  MaxFlow.hs  MaxFlow2.hs  Monad.hs  SCC.hs  SP.DAG.hs  SP.hs  TransClos.hs
Data/Graph/Inductive/Query/SP/: DAG.hs
doc/: CHANGES  README
fgl-arbitrary/: ChangeLog  LICENSE  fgl-arbitrary.cabal
fgl-arbitrary/Data/Graph/Inductive/: Arbitrary.hs
fgl-arbitrary/test/: TestSuite.hs
test/: TestSuite.hs  bcc.hs  benchmark.hs  test.hs
test/Data/Graph/Inductive/: Properties.hs  Proxy.hs
test/Data/Graph/Inductive/Graph/: Properties.hs
test/Data/Graph/Inductive/Query/: Properties.hs
