name:          fgl
version:       5.5.1.0
license:       BSD3
license-file:  LICENSE
author:        Martin Erwig, Ivan Lazar Miljenovic
maintainer:    Ivan.Miljenovic@gmail.com
category:      Data Structures, Graphs
synopsis:      Martin Erwig's Functional Graph Library

description:   {
An inductive representation of manipulating graph data structures.
.
Original website can be found at <http://web.engr.oregonstate.edu/~erwig/fgl/haskell>.
}
cabal-version: >= 1.10
build-type:    Simple
extra-source-files:
               ChangeLog

source-repository head
    type:         git
    location:     git://github.com/haskell/fgl.git

library {
    default-language: Haskell98

    exposed-modules:
        Data.Graph.Inductive.Internal.Heap,
        Data.Graph.Inductive.Internal.Queue,
        Data.Graph.Inductive.Internal.RootPath,
        Data.Graph.Inductive.Internal.Thread,
        Data.Graph.Inductive.Basic,
        Data.Graph.Inductive.Example,
        Data.Graph.Inductive.Graph,
        Data.Graph.Inductive.Monad,
        Data.Graph.Inductive.NodeMap,
        Data.Graph.Inductive.PatriciaTree,
        Data.Graph.Inductive.Query,
        Data.Graph.Inductive.Tree,
        Data.Graph.Inductive.Monad.IOArray,
        Data.Graph.Inductive.Query.ArtPoint,
        Data.Graph.Inductive.Query.BCC,
        Data.Graph.Inductive.Query.BFS,
        Data.Graph.Inductive.Query.DFS,
        Data.Graph.Inductive.Query.Dominators,
        Data.Graph.Inductive.Query.GVD,
        Data.Graph.Inductive.Query.Indep,
        Data.Graph.Inductive.Query.MST,
        Data.Graph.Inductive.Query.MaxFlow,
        Data.Graph.Inductive.Query.MaxFlow2,
        Data.Graph.Inductive.Query.Monad,
        Data.Graph.Inductive.Query.SP,
        Data.Graph.Inductive.Query.TransClos,
        Data.Graph.Inductive

    other-modules:
        Paths_fgl

    build-depends:    base < 5
                    , transformers
                    , containers
                    , array
                    , deepseq >= 1.1.0.0 && < 1.5.0.0

    if impl(ghc >= 7.2) && impl(ghc < 7.6)
        build-depends:
            ghc-prim

    ghc-options:      -Wall

}

test-suite fgl-tests {
    default-language: Haskell98

    type:             exitcode-stdio-1.0

    build-depends:    fgl
                    , base
                    , QuickCheck >= 2.3 && < 2.9
                    , hspec == 2.1.*
                    , containers

    hs-source-dirs:   test
                      fgl-arbitrary

    main-is:          TestSuite.hs

    other-modules:    Data.Graph.Inductive.Arbitrary
                    , Data.Graph.Inductive.Graph.Properties
                    , Data.Graph.Inductive.Proxy
                    , Data.Graph.Inductive.Query.Properties

    ghc-options:      -Wall

    ghc-prof-options: -prof -auto
}
