name:                fgl-arbitrary
version:             0.1.0.0
synopsis:            QuickCheck support for fgl
description:
  Provides Arbitrary instances for fgl graphs (to avoid adding a
  QuickCheck dependency for fgl)
license:             BSD3
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic
category:            Testing, Graphs
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:         git
    location:     git://github.com/haskell/fgl.git
    subdir:       fgl-arbitrary

library
  exposed-modules:     Data.Graph.Inductive.Arbitrary
  -- other-modules:
  -- other-extensions:
  build-depends:       base < 5
                     , containers
                     , fgl < 6
                     , QuickCheck >= 2.3 && < 2.9
  -- hs-source-dirs:
  default-language:    Haskell2010

  ghc-options:         -Wall

  ghc-prof-options:    -prof -auto
