name:                fgl-arbitrary
version:             0.2.0.5
synopsis:            QuickCheck support for fgl
description:
  Provides Arbitrary instances for fgl graphs (to avoid adding a
  QuickCheck dependency for fgl whilst still making the instances
  available to others).
  .
  Also available are non-fgl-specific functions for generating
  graph-like data structures.
license:             BSD3
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic
category:            Testing, Graphs
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ChangeLog

tested-with:   GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.2, GHC == 7.6.3,
               GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1, GHC == 8.2.2,
               GHC == 8.4.3, GHC == 8.6.2, GHC == 8.8.2, GHC == 8.10.1

source-repository head
    type:         git
    location:     git://github.com/haskell/fgl.git
    subdir:       fgl-arbitrary

library
  exposed-modules:     Data.Graph.Inductive.Arbitrary
  -- other-modules:
  -- other-extensions:
  build-depends:       base < 5
                     , fgl >= 5.5.2.0 && < 6
                     , QuickCheck >= 2.3 && < 2.14
  -- hs-source-dirs:
  default-language:    Haskell2010

  ghc-options:         -Wall

test-suite fgl-arbitrary-tests
    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    build-depends:    fgl-arbitrary
                    , fgl
                    , base
                    , QuickCheck
                    , hspec >= 2.1 && < 2.8
                    , containers

    hs-source-dirs:   test

    main-is:          TestSuite.hs

    ghc-options:      -Wall
